fix visible sidebar

--- a/src/sass/_sidebar.scss
+++ b/src/sass/_sidebar.scss
@@ -8,7 +8,8 @@
 @media (min-width: 768px) {
     .usngviewer-sidebar {
         height: 100%;
-        overflow-y: scroll;
+        overflow-y: auto;
+        overflow-x: hidden;
     }
 }
 
